Centralize non-driver runtime defaults
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>